Updated Assessibility Semantics

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <h1>Hori<span class="seo">seo</span>n</h1>
             <nav class="text-right">
                  <ul>
-                    <li> <a href="./assets/images/search-engine-optimization.jpg">Search Engine Optimization</a></li>
-                    <li> <a href="./assets/images/online-reputation-management.jpg">Online Reputation Management</a></li>
-                    <li> <a href="./assets/images/social-media-marketing.jpg">Social Media Marketing</a></li>
+                    <li> <a href="./assets/images/search-engine-optimization.jpg" alt="Image of a Notebook with SEO">Search Engine Optimization</a></li>
+                    <li> <a href="./assets/images/online-reputation-management.jpg" alt="Laptop with that shows Company Stats">Online Reputation Management</a></li>
+                    <li> <a href="./assets/images/social-media-marketing.jpg" alt="A team colocation determining strategies">Social Media Marketing</a></li>
                  </ul>
             </nav>     
     </header>
 
-    <section class="hero"></section>
+    <section class="hero" alt="Wonderful people working on a project during the storming phase."></section>
 
 <!-- Main body contains top provided services -->
 <main>
